Update colors for contrast issues

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ a:hover {
 }
 
 a:active {
-  color: #eeaadc;
+  color: #5f1a35;
 }
 
 h1 {
